# django-rest-boilerplate-template

./: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  package-lock.json  pyproject.toml
authentication/: serializers.py  urls.py  views.py
common/: exceptions.py  response.py
config/: urls.py
config/django/: base.py  development.py  production.py
mail/: service.py
user/: models.py  serializers.py
user/migrations/: 0001_initial.py
